--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ var HRTemplate = Handlebars.compile($('#hr-template').html());
 $('#hr').sheetrock({
   url: mySpreadsheet,
   rowTemplate: HRTemplate,
-  query: "order by G asce",
+  query: "order by G asc",
   fetchSize: 11
 }); 
   
